# advent_of_code_2024

./: .gitignore  README.md  makefile  pyproject.toml
advent_of_code_2024/: __init__.py  common.py  day.py  main.py
advent_of_code_2024/day_01/: __init__.py  main.py
advent_of_code_2024/day_02/: __init__.py  main.py
advent_of_code_2024/day_03/: __init__.py  main.py
advent_of_code_2024/day_04/: __init__.py  main.py
advent_of_code_2024/day_05/: __init__.py  main.py
advent_of_code_2024/day_06/: __init__.py  main.py  research.py  research_2.py
advent_of_code_2024/day_07/: __init__.py  main.py
advent_of_code_2024/day_08/: __init__.py  main.py
advent_of_code_2024/day_09/: __init__.py  main.py
advent_of_code_2024/day_10/: __init__.py  main.py
advent_of_code_2024/day_11/: __init__.py  main.py
advent_of_code_2024/day_12/: __init__.py  main.py
advent_of_code_2024/day_13/: __init__.py  main.py
advent_of_code_2024/day_14/: __init__.py  main.py
advent_of_code_2024/day_15/: __init__.py  main.py
advent_of_code_2024/day_16/: __init__.py  main.py
advent_of_code_2024/day_17/: __init__.py  main.py
advent_of_code_2024/day_18/: __init__.py  main.py
advent_of_code_2024/day_19/: __init__.py  main.py
advent_of_code_2024/day_20/: __init__.py  main.py
advent_of_code_2024/day_21/: __init__.py  main.py
advent_of_code_2024/day_22/: __init__.py  main.py
advent_of_code_2024/day_23/: __init__.py  main.py
advent_of_code_2024/day_24/: __init__.py  main.py
advent_of_code_2024/day_25/: __init__.py  main.py
tests/: conftest.py  test_common.py
