[tool.poetry]
name = "advent_of_code_2024"
version = "0.1.0"
description = ""
authors = ["Andrew Kalz <andrew.kalz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
icecream = "^2.1.3"
sympy = "^1.13.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
